<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="security_header"
        android:title="@string/preferences_header_security">

        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <SwitchPreference
            android:key="@string/pref_key_passcode_toggle"
            android:persistent="false"
            android:title="@string/passcode_turn_on" >
        </SwitchPreference>

        <!-- Allows the user to change a PIN in the 'Security' category.
             NOTE: This preference will be enabled only when the switch above is checked. -->
        <Preference
            android:key="@string/pref_key_change_passcode"
            android:persistent="false"
            android:title="@string/passcode_change_passcode" >
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category5">

        <Preference
            android:key="notifications_settings"
            android:title="@string/notifications_settings"
            android:summary="@string/notifications_settings_description"
            android:icon="@drawable/ic_auto_fix_white_36dp"/>

        <CheckBoxPreference
            android:key="notifications_activated"
            android:title="@string/facebook_notifications"
            android:defaultValue="true"
            android:icon="@drawable/ic_notifications_active"/>

        <CheckBoxPreference
            android:key="message_notifications"
            android:title="@string/message_notifications"
            android:defaultValue="true"
            android:icon="@drawable/ic_chat"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category4">

        <CheckBoxPreference
            android:key="touch_mode"
            android:title="@string/touch_mode"
            android:summary="@string/touch_mode_description"
            android:enabled="false"
            android:defaultValue="false"
            android:icon="@drawable/ic_checkbox_multiple_blank_circle_white_36dp"/>

        <CheckBoxPreference
            android:key="basic_mode"
            android:title="@string/basic_mode"
            android:summary="@string/basic_mode_description"
            android:enabled="false"
            android:defaultValue="false"
            android:icon="@drawable/ic_free_breakfast_white_48dp"/>

        <CheckBoxPreference
            android:key="dark_theme"
            android:title="@string/dark_theme"
            android:summary="@string/dark_theme_description"
            android:enabled="false"
            android:defaultValue="false"
            android:icon="@drawable/ic_format_color_fill"/>

        <CheckBoxPreference
            android:key="location"
            android:title="@string/location_access"
            android:defaultValue="false"
            android:icon="@drawable/ic_map_marker_white_36dp"/>

        <CheckBoxPreference
            android:key="load_extra"
            android:title="@string/load_extra"
            android:summary="@string/load_extra_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_wallpaper"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/preference_category1">

        <CheckBoxPreference
            android:key="progress_bar"
            android:title="@string/progress_bar"
            android:defaultValue="true"
            android:icon="@drawable/ic_camera_timer_white_36dp"
            />

        <CheckBoxPreference
            android:key="confirm_exit"
            android:title="@string/confirm_exit"
            android:defaultValue="false"
            android:icon="@drawable/ic_logout_white_36dp"/>

        <CheckBoxPreference
            android:key="long_clicks"
            android:title="@string/long_clicks"
            android:summary="@string/long_clicks_description"
            android:defaultValue="true"
            android:icon="@drawable/ic_touch_app"/>

        <CheckBoxPreference
            android:key="fixed_nav"
            android:title="@string/fixed_nav"
            android:summary="@string/fixed_nav_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_open_in_browser"/>

        <EditTextPreference
            android:title="@string/font_size"
            android:summary="@string/font_size_description"
            android:key="font_size"
            android:defaultValue="100"
            android:hint="@string/font_size_hint"
            android:maxLength="3"
            android:inputType="number"
            android:icon="@drawable/ic_mode_edit_white_24dp"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/preference_category6">

        <CheckBoxPreference
            android:key="most_recent"
            android:title="@string/most_recent"
            android:summary="@string/most_recent_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_newspaper_white_36dp"/>

        <CheckBoxPreference
            android:key="hide_sponsored"
            android:title="@string/hide_sponsored"
            android:summary="@string/hide_sponsored_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_earth_off_white_36dp"/>
            
        <CheckBoxPreference
            android:key="hide_people"
            android:title="@string/hide_people"
            android:summary="@string/hide_people_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_nature_people_white_36dp"/>
            
        <CheckBoxPreference
            android:key="no_images"
            android:title="@string/no_images"
            android:summary="@string/no_images_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_google_photos_white_36dp"/>
            
        <CheckBoxPreference
            android:key="hide_news_feed"
            android:title="@string/hide_news_feed"
            android:summary="@string/hide_news_feed_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_event"/>

        </PreferenceCategory>


    <!-- <PreferenceCategory
        android:title="@string/preference_category3">
    </PreferenceCategory> -->


    <PreferenceCategory
        android:title="@string/offline_mode">

        <CheckBoxPreference
            android:key="offline_mode"
            android:title="@string/offline_mode_enable"
            android:summary="@string/offline_mode_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_earth_off_white_36dp"/>

        <EditTextPreference
            android:key="offline_keep_max"
            android:inputType="number"
            android:title="@string/offline_keep_max"
            android:summary="@string/offline_keep_max_description"
            android:maxLength="5"
            android:defaultValue="10"
            android:icon="@drawable/ic_book_open_page_variant_white_36dp"/>

        <Preference
            android:summary="@string/offline_dummy_description"
            android:selectable="false"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/preference_category2">

        <CheckBoxPreference
            android:key="hardware_acceleration"
            android:title="@string/hardware_acceleration"
            android:summary="@string/hardware_acceleration_description"
            android:defaultValue="true"
            android:icon="@drawable/ic_blur_white_36dp"/>

        <CheckBoxPreference
            android:key="file_logging"
            android:title="@string/file_logger"
            android:summary="@string/file_logger_description"
            android:defaultValue="false"
            android:icon="@drawable/ic_file_download"/>

        <CheckBoxPreference
            android:key="keyboard_fix"
            android:title="@string/keyboard_fix"
            android:defaultValue="true"
            android:icon="@drawable/ic_keyboard_close_white_36dp"/>

        <EditTextPreference
            android:key="custom_user_agent"
            android:inputType="text"
            android:title="@string/custom_user_agent"
            android:summary="@string/custom_user_agent_description"
            android:hint="@string/custom_user_agent_hint"
            android:defaultValue="@string/predefined_user_agent"
            android:icon="@drawable/ic_account_settings_variant_white_36dp"/>

        <Preference
            android:key="clear_cache"
            android:title="@string/clear_cache"
            android:summary="@string/clear_cache_description"
            android:icon="@drawable/ic_power_settings_new"/>

    </PreferenceCategory>

</PreferenceScreen>